workloads/vulcain/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulcain
  namespace: vulcain
  labels:
    app: vulcain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulcain
  template:
    metadata:
      labels:
        app: vulcain
    spec:
      containers:
        - name: vulcain
          image: ghcr.io/bapttf/vulcain
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7331
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 1Gi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /api/meta
              port: 7331
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/meta
              port: 7331
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vulcain-data
