workloads/vulcain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vulcain
  namespace: vulcain
spec:
  selector:
    app: vulcain
  ports:
    - port: 7331
      targetPort: 7331
