workloads/vulcain/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vulcain
  namespace: vulcain
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vulcain.bapttf.com`)
      kind: Rule
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
      services:
        - name: vulcain
          port: 7331
  tls: {}
